--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<version>1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
